Fixed alignment issue

--- a/src/index.css
+++ b/src/index.css
@@ -18,5 +18,14 @@ code {
 	align-items: center;
 	display: flex;
 	flex-direction: column;
-	height: fit-content;
+	width: 800px;
+	height: 600px;
+}
+
+.header-container {
+	align-items: center;
+	display: flex;
+	flex-direction: column;
+	width: 800px;
+	height: 56px;
 }
