--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -1,1 +1,6 @@
-
+.home-page {
+	align-items: stretch;
+	color: black;
+	display: flex;
+	flex-direction: column;
+}
