--- a/src/pages/Profiles.scss
+++ b/src/pages/Profiles.scss
@@ -1,5 +1,3 @@
 .profiles {
-	margin-top: 56px;
 	color: black;
-	width: 800px;
 }
